# celery-flower-combo

./: Dockerfile.nginx  README.md  docker-compose.yml  nginx.conf
celery_workers/: Dockerfile  pyproject.toml
celery_workers/celery_workers/: worker.py
flower/storage/: flower.db
grafana_storage/: grafana.db
